--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj.filters
@@ -10,5 +10,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestShaderProvider.cpp">
       <Filter>TestRenderingSystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestDrawing.cpp">
+      <Filter>TestRenderingSystem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
