--- a/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
+++ b/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
@@ -30,16 +30,21 @@
     <ClCompile Include="..\..\..\TestFramework\TestFramework.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\ClassesUI\DependencyPropsClass.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\ClassesUI\TestUIElementClass.cpp" />
+    <ClCompile Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeBrush.cpp" />
+    <ClCompile Include="..\..\..\TestFramework\Utils\Mocks\Rendering\FakeDrawing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\TestFramework\stdafx.h" />
     <ClInclude Include="..\..\..\TestFramework\targetver.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Bindings\TesterBinding.h" />
+    <ClInclude Include="..\..\..\TestFramework\Testers\Rendering\DrawingTester.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Window\HostWindowTester.h" />
     <ClInclude Include="..\..\..\TestFramework\TestFramework.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\DependencyPropsClass.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\SubclassTestElement.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\TestUIElementClass.h" />
+    <ClInclude Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeBrush.h" />
+    <ClInclude Include="..\..\..\TestFramework\Utils\Mocks\Rendering\FakeDrawing.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\swGraphicAPI\ProjectsDir\Visual2015\MockAPI\MockAPI.vcxproj">
