--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\main.cpp" />
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestDrawing.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestShaderProvider.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
