FakeGeometry class added

--- a/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
+++ b/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="..\..\..\TestFramework\Utils\ClassesUI\DependencyPropsClass.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\ClassesUI\TestUIElementClass.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeBrush.cpp" />
+    <ClCompile Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeGeometry.cpp" />
     <ClCompile Include="..\..\..\TestFramework\Utils\Mocks\Rendering\FakeDrawing.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -44,6 +45,7 @@
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\SubclassTestElement.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\TestUIElementClass.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeBrush.h" />
+    <ClInclude Include="..\..\..\TestFramework\Utils\Mocks\Media\FakeGeometry.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\Mocks\Rendering\FakeDrawing.h" />
   </ItemGroup>
   <ItemGroup>
