--- a/ProjectDir/Visual2015/CoreGUI/CoreGUIConfig.props
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUIConfig.props
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
   <Import Project="..\Paths.props" />
-  
   <PropertyGroup Label="UserMacros">
     <CoreGUIName>CoreGUI</CoreGUIName>
     <CoreGUILibDir>$(LibDir)$(CoreGUIName)\</CoreGUILibDir>
@@ -10,11 +8,19 @@
     <CoreGUIFileName>$(CoreGUIName)_$(Configuration)_$(PlatformShortName)_$(PlatformToolset)</CoreGUIFileName>
     <CoreGUIBuildDir>$(BuildDir)$(CoreGUIName)_$(Configuration)_$(PlatformShortName)_$(PlatformToolset)\</CoreGUIBuildDir>
   </PropertyGroup>
-  
   <PropertyGroup>
     <IntDir>$(CoreGUIBuildDir)</IntDir>
     <TargetName>$(CoreGUIFileName)</TargetName>
     <OutDir>$(CoreGUILibDir)</OutDir>
   </PropertyGroup>
-
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup>
+    <ClCompile>
+      <PrecompiledHeaderFile>swGUI/Core/stdafx.h</PrecompiledHeaderFile>
+    </ClCompile>
+  </ItemDefinitionGroup>
 </Project>
