--- a/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
+++ b/ProjectDir/Visual2015/TestFramework/TestFramework.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="..\..\..\TestFramework\targetver.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Bindings\TesterBinding.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Rendering\DrawingTester.h" />
+    <ClInclude Include="..\..\..\TestFramework\Testers\Rendering\RenderingSystemTester.h" />
     <ClInclude Include="..\..\..\TestFramework\Testers\Window\HostWindowTester.h" />
     <ClInclude Include="..\..\..\TestFramework\TestFramework.h" />
     <ClInclude Include="..\..\..\TestFramework\Utils\ClassesUI\DependencyPropsClass.h" />
