--- a/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestRenderingSystem/TestRenderingSystem.vcxproj.filters
@@ -16,5 +16,8 @@
     <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestLayouts.cpp">
       <Filter>TestRenderingSystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestRenderingSystem\TestRenderingSystem.cpp">
+      <Filter>TestRenderingSystem</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
