Test Drawing rectangle in prototyper (doesn't work)

--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -250,6 +250,12 @@
     <ClCompile Include="..\..\..\Core\System\Time\Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\swGeometrics\ProjectDir\Visual2015\BasicShapes\BasicShapes.vcxproj">
+      <Project>{b70c60c2-29eb-4302-80ef-9d396749d545}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\swGeometrics\ProjectDir\Visual2015\GeometricsCore\GeometricsCore.vcxproj">
+      <Project>{5476cbf5-f7f9-488f-b55c-b6331b82c54a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\swGraphicAPI\ProjectsDir\Visual2015\ResourceManager\ResourceManager.vcxproj">
       <Project>{9f71f0da-1d72-4e96-93b7-5ac2c9cb6ede}</Project>
     </ProjectReference>
